# contour

./: .clang-format  .clang-tidy  .codecov.yml  .ecrc  .editorconfig  .gitignore  .gitmodules  .spellcheck.yml  .travis.yml  404.html  AGENT.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE  PLAN-bidi.md  README.md  ROADMAP-bidi.md  ROADMAP-mux.md  ROADMAP-vthost.md  ROADMAP.md  SECURITY.md  TODO.md  autogen.sh  cmake.diff  contour-integration.zsh  contour.yml  cspell.json  index.html  metainfo.xml  mkdocs.yml  patch_openconsole.py  valgrind.supp  vcpkg-configuration.json  vcpkg.json
cmake/cincludeme/: CMakeLists.txt  cincludeme.cpp
examples/: .clang-tidy  CMakeLists.txt  bidi-demo.cpp  detect-dark-light-mode.cpp  drcs-demo.cpp  hud-screen-demo.cpp  multi-page-demo.cpp  origin-mode-and-margins.sh  proxy_term.cpp  pty_example.cpp  regis-animation.cpp  regis-plot2d.cpp  regis-plot3d.cpp  regis-primitives.cpp  stats_term.cpp  termbench.cpp  text-sizing-demo.cpp  vt-set-profile  watch-clipboard-paste.cpp  watch-dec-locator.cpp  watch-mouse-events.cpp
examples/absolute/: AbsoluteTerminal.cpp  AbsoluteTerminal.h  CMakeLists.txt  CellBackground.cpp  CellBackground.h  FontManager.h  GLCursor.cpp  GLTerminal.h  GLTextShaper.h  README.md  Shader.h  Window.cpp  main.cpp
examples/aeroterm/: AeroTerminal.cpp  AeroTerminal.h  CMakeLists.txt  CellBackground.cpp  CellBackground.h  Config.cpp  Config.h  FileChangeWatcher.cpp  Flags.cpp  Flags.h  FontManager.cpp  GLCursor.h  GLTerminal.cpp  GLTerminal.h  GLTextShaper.cpp  GLTextShaper.h  README.md  Shader.cpp  Window.cpp  Window.h  aeroterm.yaml  main.cpp
examples/glterm/: CMakeLists.txt  CellBackground.cpp  CellBackground.h  FontManager.cpp  FontManager.h  GLCursor.cpp  GLCursor.h  GLLogger.cpp  GLLogger.h  GLTerminal.cpp  GLTerminal.h  GLTextShaper.cpp  GLTextShaper.h  Logger.cpp  Logger.h  README.md  Shader.cpp  Shader.h  TextShaper.cpp  TextShaper.h  Window.cpp  Window.h  glterm.cpp
src/: .clang-tidy  CMakeLists.txt  IncludeFilesystem.h
src/chrono/: CMakeLists.txt  chrono.cpp
src/contour/: ActionHandler.cpp  ActionHandler.h  Actions.cpp  Actions.h  AsciiText.h  AtomicFileWrite.cpp  AtomicFileWrite.h  Audio.cpp  Audio.h  AudioNote.h  BackgroundBlur.cpp  BackgroundBlur.h  BenignQtMessages.h  BlurBehind.cpp  BlurBehind.h  CMakeLists.txt  CaptureScreen.cpp  CaptureScreen.h  CatImageArgs.h  ColorConversion.h  Command.cpp  Command.h  CommandCatalog.cpp  CommandCatalog.h  CommandHistory.cpp  CommandHistory.h  CommandHistoryStore.cpp  CommandHistoryStore.h  CommandPaletteModel.cpp  CommandPaletteModel.h  Config.cpp  Config.h  ConfigDocumentation.h  ContextMenu.cpp  ContextMenu.h  ContextMenuModel.cpp  ContextMenuModel.h  ContextMenuTable.h  Contour.cpp  Contour.h  (+83 more)
src/coro/: Awaitable.hpp  CMakeLists.txt  Cancellation.hpp  README.md  Task.hpp  Task_test.cpp  UniqueCoroHandle.hpp  WhenAll.hpp  WhenAll_test.cpp  WhenAny.hpp  WhenAny_test.cpp
src/crispy/: .clang-tidy  AlignedAllocator.h  App.cpp  App.h  Atlas.h  AtlasRenderer.cpp  AtlasRenderer.h  BufferObject.cpp  BufferObject.h  BufferObject_test.cpp  CLI.cpp  CLI.h  CLI_test.cpp  CMakeLists.txt  Comparison.h  FNV.h  FixedOpenVector.h  FixedVector.h  FontManager.cpp  FontManager.h  ImageSize.h  Intrinsics.h  LRUCache.h  LRUCache_test.cpp  Owned.h  Size_test.cpp  StackTrace.cpp  StackTrace.h  StrongHash.h  StrongLRUCache.h  StrongLRUCache_test.cpp  StrongLRUHashtable.h  StrongLRUHashtable_test.cpp  SuppressWindowsDialogs.hpp  TextRenderer.cpp  TextRenderer.h  TextShaper.cpp  TextShaper.h  TrieMap.h  TrieMap_test.cpp  (+53 more)
src/glterminal/: CMakeLists.txt  CellBackground.cpp  CellBackground.h  FontManager.cpp  GLCursor.cpp  GLCursor.h  GLLogger.cpp  GLLogger.h  GLTerminal.cpp  GLTerminal.h  GLTextShaper.cpp  GLTextShaper.h  Shader.cpp
src/ground/: CMakeLists.txt  FileChangeWatcher.cpp  FileChangeWatcher.h  StringUtils.cpp  StringUtils.h  StringUtils_test.cpp  UTF8.h  UTF8_test.cpp  stdfs.h
src/muxserver/: CMakeLists.txt  Daemon.cpp  Daemon.h  MirroredModes.h  MuxServer.cpp  MuxServer.h  MuxServer_test.cpp  NativeSession.cpp  NativeSession.h  NativeSession_test.cpp  PduPump.h  SessionHost.cpp  SessionHost.h  SessionHost_test.cpp  SocketPath.h  SocketPath_test.cpp  TappingPty.h
src/net/: AsyncBufferedReader.cpp  AsyncBufferedReader.h  AsyncBufferedReader_test.cpp  CMakeLists.txt  EventLoop.cpp  EventLoop.h  EventLoop_test.cpp  EventSource.h  FdPassing_test.cpp  IListener.h  ISocket.h  IoResult.h  PollEventSource.cpp  PollEventSource.h  Socket_test.cpp  Sockets.h  SplitSocket.h  Tls.cpp  Tls.h  Tls_test.cpp  UnixSocket_test.cpp  WaitChunking.h  WithTimeout.h  WriteQueue.cpp  WriteQueue.h  WriteQueue_test.cpp
src/regex_dfa/: Alphabet.cpp  Alphabet.h  CMakeLists.txt  CharStream.h  Compiler.cpp  Compiler.h  DFA.cpp  DFA.h  DFABuilder.cpp  DFABuilder.h  DFABuilder_test.cpp  DFAMinimizer.cpp  DFAMinimizer.h  DotVisitor.h  DotWriter.cpp  DotWriter.h  DotWriter_test.cpp  Lexable.h  Lexer-inl.h  Lexer.h  LexerDef.h  Lexer_test.cpp  MultiDFA.cpp  MultiDFA.h  NFA.cpp  NFA.h  NFABuilder.cpp  NFABuilder.h  NFA_test.cpp  RegExpr.cpp  RegExpr.h  RegExprParser.cpp  RegExprParser.h  RegExprParser_test.cpp  Report.cpp  Report.h  Rule.h  RuleParser.cpp  RuleParser.h  RuleParser_test.cpp  (+12 more)
src/sse2neon/: README.md
src/terminal/: CMakeLists.txt  Capabilities.cpp  Capabilities.h  Capabilities_test.cpp  Cell.cpp  Cell.h  CellConcept.h  CellConfig.h  CellFlags.h  CellUtil.h  Charset.cpp  Charset.h  Color.cpp  Color.h  ColorPalette.cpp  ColorPalette.h  (+115 more)
test/: CMakeLists.txt  DECAC.sh  DECATC.sh  DECDC.sh  DECIC.sh  DECSLRM.sh  DECSTBM.sh  KAM.sh  batched-rendering.sh  box-drawings.sh  colors-256.sh  colors.sh  copy-to-clipboard.sh  decoration.sh  demo_math_symbols.py  demo_parenthesis_pieces.py  dimmed-bold-bright-text.sh  display-modes.sh  fill-screen.sh  font-fallback.sh  font-fallback.txt  hb-inspect.cpp  lf-test.sh  origin-mode-and-margins.sh  osc99-notifications.py  scroll-up-with-margins.sh  synchronized-output.sh  uc-inspect.cpp  wcwidth.cpp
(+1250 files in other folders)
